# Halide

./: CMakeLists.txt  Makefile
apps/hannk/interpreter/: interpreter.cpp  tensor.cpp  tensor.h
cmake/: Findpybind11.cmake
dependencies/: CMakeLists.txt
dependencies/llvm/: CMakeLists.txt
dependencies/wasm/: CMakeLists.txt
python_bindings/: CMakeLists.txt
src/: CMakeLists.txt  G2.h
src/autoschedulers/adams2019/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/tools/: CMakeLists.txt
test/correctness/: argmax.cpp  example_test.cpp
test/generator/: CMakeLists.txt  g2_aottest.cpp  g2_generator.cpp
